Change the positioning params of all figures.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -92,7 +92,7 @@ corporations or public organizations cannot afford leaving out large
 shares of the mobile market (see smartphone sales by operating system
 in Figure~\ref{figure:market-share.png}). \cite{berners2010long}
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=0.6\textwidth]{images/market-share.png}
     \caption{Worldwide Smartphone sales by operating systems in 4Q
@@ -990,7 +990,7 @@ building these applications. Fling \cite{fling2011anatomy} represents
 a typical anatomy of a mobile HTML5 application as shown in
 Figure~\ref{figure:anatomy-of-a-html5-mobile-app.png}.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \includegraphics[width=\textwidth]{images/anatomy-of-a-html5-mobile-app.png}
   \caption{HTML5 Mobile Application Anatomy according to
     \cite{fling2011anatomy}.}
@@ -1177,7 +1177,7 @@ is to provide a progressively enhanced web framework for as many
 devices as possible. Figure~\ref{figure:jquerymobile.png} shows
 example components in the framework.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/jquerymobile.png}
     \caption{jQuery Mobile user interface
@@ -1201,7 +1201,7 @@ user interface components, as well as helpers for handling touch
 input. Figure~\ref{figure:jqtouch.png} shows example components of the
 library.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/jqtouch.png}
     \caption{jQTouch user
@@ -1219,7 +1219,7 @@ comes with a large set of user interface components. It also provides
 helpers for touch input handling. Figure~\ref{figure:sencha.png} shows
 example components of the library.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/sencha.png}
     \caption{Sencha Touch user
