--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -16,7 +16,7 @@ Chapter~\ref{chapter:other-related-specifications}.
 
 \section{Conference Application}
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/devdays.png}
     \caption{Conference schedule application architecture.}
@@ -60,7 +60,7 @@ services was also added as an additional
 functionality. Figure~\ref{figure:ipad-session.jpg} shows an example
 view in the application.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/ipad-session.jpg}
     \caption{Session details view on an iPad.}
@@ -109,7 +109,7 @@ demo\footnote{\url{http://kpuputti.github.com/JSONCache/demo/index.html}}
 simulates the caching and fetching functionality of the library by
 simulating an unreliable network based on the configuration.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/jsoncache-demo.png}
     \caption{Interactive JSONCache demo.}
@@ -223,7 +223,7 @@ details view. The favorites were then listed on the home view (see
 Figure~\ref{figure:android-home-favorites.jpg}) together with
 information about the time left for them to begin.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/iphone-android-agenda.jpg}
     \caption{Agenda view with stars to add favorites on an iPhone
@@ -232,7 +232,7 @@ information about the time left for them to begin.
   \end{center}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/android-home.jpg}
     \caption{Home view without favorites (left) on a device running
@@ -315,7 +315,7 @@ dimensions so that I could provide smaller images for smaller screens
 and high resolution images for tablets and other devices with larger
 screen estate.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=0.5\textwidth]{images/nokia-map.jpg}
     \caption{Floor map view on a device running Nokia Belle
@@ -602,7 +602,7 @@ and responsiveness in changing the page views. I also used touch
 events in the session rating form seen in
 Figure~\ref{figure:android-feedback-stars.jpg}.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=0.6\textwidth]{images/android-feedback-stars.jpg}
     \caption{Touchable session rating stars on a device running Android.}
@@ -630,7 +630,7 @@ conference application performance using YSlow. The results of the
 analysis are seen in Figure~\ref{figure:yslow-v2-grade.png} and
 Figure~\ref{figure:yslow-v2-statistics.png}.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/yslow-v2-grade.png}
     \caption{YSlow results grade.}
@@ -638,7 +638,7 @@ Figure~\ref{figure:yslow-v2-statistics.png}.
   \end{center}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/yslow-v2-statistics.png}
     \caption{YSlow results statistics.}
@@ -671,7 +671,7 @@ to analyze the conference application against the performance rules
 defined in Page Speed. The results are shown in
 Figure~\ref{figure:devdays-pagespeed.png}.
 
-\begin{figure}[ht]
+\begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{images/devdays-pagespeed.png}
     \caption{Page Speed results for the conference application.}
