--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -532,6 +532,8 @@ Thank you.
 % Edit the content in these files, rename them as necessary.
 % ------------------------------------------------------------------
 
+\fixme{go through and open abbrs}
+
 %\input{gitinfo.tex}
 \input{introduction.tex}
 %\input{research-question.tex}
